--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "connect-four",
-  "main": "index.js",
+  "main": "index.mjs",
   "packageManager": "yarn@3.4.1",
   "author": "Eugene Avila (https://eugenerationx.com)",
+  "scripts": {
+    "start": "node --experimental-modules index.mjs"
+  },
   "license": "MIT",
-  "bin": {
-    "connect-four": "./bin/index.js"
-  }
+  "bin": "./bin/index.mjs",
+  "dependencies": {
+    "chalk": "^5.2.0"
+  },
+  "type": "module"
 }
