Removed: yargs Added: checkWin method

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "license": "MIT",
   "bin": "./bin/index.mjs",
   "dependencies": {
-    "chalk": "^5.2.0",
-    "yargs": "next"
+    "chalk": "^5.2.0"
   },
   "type": "module"
 }
